# pfa

./: CONTRIBUTING.md  README.project.md  generate-docs.js  next.config.ts  package-lock.json  package.json  vercel.json
backend/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/middleware/: auth.py  error_handler.py
backend/app/routers/: auth.py  conferences.py  reviews.py  submissions.py  users.py
backend/app/services/: auth.py  conferences.py  reviews.py  submissions.py  users.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260429180457_init/: migration.sql
backend/src/: index.ts
backend/src/controllers/: auth.controller.ts  conferences.controller.ts  reviews.controller.ts  submissions.controller.ts  users.controller.ts
backend/src/routes/: auth.routes.ts  conferences.routes.ts  reviews.routes.ts  submissions.routes.ts  users.routes.ts
backend/src/services/: auth.service.ts  conferences.service.ts  reviews.service.ts  submissions.service.ts  users.service.ts
docs/: GUIDE_LANCEMENT.md  README.md
docs/etape-01_initialisation/: README.md
docs/etape-02_authentification/: README.md
docs/etape-03_dashboard/: README.md
docs/etape-04_conferences/: README.md
docs/etape-05_soumissions/: README.md
docs/etape-06_evaluations/: README.md
src/: proxy.ts
src/app/: globals.css  layout.tsx
src/hooks/: use-current-user.ts
src/lib/: api.ts  auth.ts  utils.ts
src/types/: index.ts
(+26 files in other folders)
