[project]
name = "academicconf-backend"
version = "1.0.0"
description = "Backend REST API for AcademicConf — Academic Conference & Paper Management Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
]
